# equilibrium

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: index.md
src/: app.rs  fluid.rs  lib.rs  main.rs  renderer.rs  tests.rs  triangle.rs
src/app/: app.rs  cached_image.rs  mod.rs
src/app/widgets/: fluid_configs_menu.rs  fluid_widget.rs  mod.rs  obstacle_widget.rs  simulation_configs_menu.rs  simulation_widget.rs  viewport_configs_menu.rs  viewport_widget.rs  widgets_menu.rs
src/app_widgets/: fluid_configs_menu.rs  mod.rs  simulation_configs_menu.rs  widgets_menu.rs
src/simulation/: animation.rs  configs.rs  current_simulation.rs  fluid.rs  mod.rs  obstacle.rs  renderer.rs  renderer_helpers.rs
