[package]
name = "equilibrium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.5.0"
sdl = "0.3.6"
egui_sdl2_gl = "0.15.0"
eframe = "0.15.0"
image = "0.23.14"
rand = "0.8.4"
noise = "0.7.0"
nalgebra-glm = "0.3"
geo = "0.18.0"
derive-getters = "0.2.0"
